--- a/WebSPA/src/app/orders/create-customer/create-customer.component.html
+++ b/WebSPA/src/app/orders/create-customer/create-customer.component.html
@@ -6,7 +6,7 @@
   <hr>
   <div>
     <form #customerForm="ngForm" (ngSubmit)="onAddButtonClick(customerForm)">
-      <div class="row-sm">Personal Details:</div>
+      <div class="row-sm">Personal Details :</div>
       <div class="form-group col">
         <div class="form-group row">
           <div class="col">
@@ -39,7 +39,7 @@
         </fieldset>
       </div>
 
-      <div class="row-sm">Contact Details:</div>
+      <div class="row-sm">Contact Details :</div>
       <div class="form-group col">
         <div class="form-group row">
           <div class="col">
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-      <div class="row-sm">Billing Address Details:</div>
+      <div class="row-sm">Billing Address Details :</div>
       <div class="form-group col">
         <div class="form-row">
           <div class="form-group col-md-4">
@@ -89,7 +89,7 @@
         </div>
       </div>
 
-        <button type="submit" style="float: right" class="btn btn-primary btn-sm">Create Customer</button>
+      <button type="submit" style="float: right" class="btn btn-primary btn-sm"><img src="../../../assets/add.png" style="height: 20px;">&nbsp; Create Customer</button>
     </form>
   </div>
 </div>
