--- a/WebSPA/src/app/orders/orders.component.html
+++ b/WebSPA/src/app/orders/orders.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="orders">Order Management System</a>
+  <a class="navbar-brand" href="orders"><img src="../../../assets/monitor.png" style="height: 50px">&nbsp; Order Management System</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,7 +15,7 @@
         <a class="nav-link" href="orders/addProduct">Create Product</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacts">Contact Details</a>
+        <a class="nav-link" href="contacts">Customer Details</a>
       </li>
     </ul>
   </div>
