--- a/WebSPA/src/app/contacts/contact-details/contact-details.component.html
+++ b/WebSPA/src/app/contacts/contact-details/contact-details.component.html
@@ -5,6 +5,7 @@
   </div>
   <hr> 
   <div class="container-fluid">
+    <div class="row-sm">Personal Details :</div>
     <div class="col">
       <div class="form-group row">
         <div class="col">
@@ -36,7 +37,10 @@
           </div>
         </div>
       </fieldset>
+    </div>
 
+    <div class="row-sm">Contact Details :</div>
+    <div class="form-group col">
       <div class="form-group row">
         <div class="col">
           <label class="col-form-label col-form-label-sm">Email</label>
@@ -58,8 +62,10 @@
           <input type="text" class="form-control form-control-sm" id="homePhone" name="homePhone" [(ngModel)]="homePhone" placeholder="xxxxxxxxxx" readonly>
         </div>
       </div>
+    </div>
 
-
+    <div class="row-sm">Address Details :</div>
+    <div class="form-group col">
       <div class="form-row">
         <div class="form-group col-md-4">
           <label class="col-form-label col-form-label-sm">Street</label>
@@ -80,9 +86,9 @@
       </div>
     </div>
     <div style="float: right">
-      <button type="submit" class="btn btn-info btn-sm" (click)="editDetails(customerId)">Edit Contact</button>
+      <button type="submit" class="btn btn-info btn-sm" (click)="editDetails(customerId)"><img src="../../../assets/edit.png" style="height: 20px;">&nbsp; Edit Contact</button>
       &nbsp;
-      <button type="button" class="btn btn-danger btn-sm" (click)="deleteContact(customerId)">Delete Contact</button>
+      <button type="button" class="btn btn-danger btn-sm" (click)="deleteContact(customerId)"><img src="../../../assets/delete.png" style="height: 20px;">&nbsp; Delete Contact</button>
     </div>
   </div>
 </div>  
