--- a/WebSPA/src/app/contacts/edit-contact/edit-contact.component.html
+++ b/WebSPA/src/app/contacts/edit-contact/edit-contact.component.html
@@ -6,6 +6,7 @@
   <hr> 
   <div>
     <form #contactForm="ngForm" novalidate (ngSubmit)="onEditButtonClick(contactForm)">
+      <div class="row-sm">Personal Details :</div>
       <div class="col">
         <div class="form-group row">
           <div class="col">
@@ -37,7 +38,10 @@
             </div>
           </div>
         </fieldset>
+      </div>
 
+      <div class="row-sm">Contact Details :</div>
+      <div class="form-group col">
         <div class="form-group row">
           <div class="col">
             <label class="col-form-label col-form-label-sm">Email</label>
@@ -59,7 +63,10 @@
             <input type="text" class="form-control form-control-sm" id="homePhone" name="homePhone" [(ngModel)]="homePhone" placeholder="xxxxxxxxxx">
           </div>
         </div>
+      </div>
 
+      <div class="row-sm">Address Details :</div>
+      <div class="form-group col">
         <div class="form-row">
           <div class="form-group col-md-4">
             <label class="col-form-label col-form-label-sm">Street</label>
@@ -83,7 +90,7 @@
           </div>
         </div>
       </div>
-        <button type="submit" style="float: right" class="btn btn-primary btn-sm">Edit Contact</button>
+      <button type="submit" style="float: right" class="btn btn-primary btn-sm"><img src="../../../assets/edit.png" style="height: 20px;">&nbsp; Edit Contact</button>
     </form>
   </div>
 </div>
