--- a/WebSPA/src/app/orders/create-product/create-product.component.html
+++ b/WebSPA/src/app/orders/create-product/create-product.component.html
@@ -4,35 +4,50 @@
     <h5>Create a New Product</h5>
   </div>
   <hr>
-  <div>
-    <form #contactForm="ngForm" (ngSubmit)="onAddButtonClick(contactForm)">
-      <div class="form-group">
-        <label class="col-form-label col-form-label-sm">Product Name</label>
-        <input type="text" class="form-control form-control-sm" id="productName" name="productName" [(ngModel)]="productName" placeholder="Product Name" required>
-      </div>
-      <div class="form-group">
-        <label class="col-form-label col-form-label-sm">Product Category</label>
-        <input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category">
-      </div>
+  <form #productForm="ngForm" (ngSubmit)="onAddButtonClick(productForm)">
+    <div class="col-sm">Product Details :</div>
+    <div class="col">
+      <div class="col">
+        <div class="form-group row">
+          <div class="col">
+            <label class="col-form-label col-form-label-sm">Product Name</label>
+            <input type="text" class="form-control form-control-sm" id="productName" name="productName" [(ngModel)]="productName" placeholder="Product Name" required>
+          </div>
+          <div class="col">
+            <label class="col-form-label col-form-label-sm">Product Category</label>
+            <!--<input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category">-->
+            <tag-input class="form-control-sm" [(ngModel)]="productCategory" id="productCategory" theme='dark' name="productCategory" [secondaryPlaceholder]="'Product Category'" [maxItems]='1'>
+              <tag-input-dropdown [autocompleteItems]=productCategoryNames>
+              </tag-input-dropdown>
+            </tag-input>
+          </div>
+        </div>
 
-      <div class="form-group">
-        <label class="col-form-label col-form-label-sm">Description</label>
-        <input type="text" class="form-control  form-control-sm" id="street" name="description" [(ngModel)]="description" placeholder="Product Description">
-      </div>
+        <div class="form-group">
+          <label class="col-form-label col-form-label-sm">Description</label>
+          <textarea rows="4" class="form-control  form-control-sm" id="street" name="description" [(ngModel)]="description" placeholder="Product Description"></textarea>
+        </div>
 
-      <div class="form-group">
-        <label class="col-form-label col-form-label-sm">Unit Price</label>
-        <input type="text" class="form-control form-control-sm" id="price" name="price" [(ngModel)]="price" placeholder="$$">
+        <div class="form-group row">
+          <div class="col">
+            <label class="col-form-label col-form-label-sm">Unit Price</label>
+            <input type="text" class="form-control form-control-sm" id="price" name="price" [(ngModel)]="price" placeholder="Unit Price">
+          </div>
+          <div class="col">
+            <label class="col-form-label col-form-label-sm">Availability</label>
+            <br />
+            <div class="col">
+              <input type="checkbox" class="form-check-input" id="isAvailable" name="isAvailable" [(ngModel)]="isAvailable">
+              <label class="form-check-label" for="isAvailable">Is Available</label>
+            </div>
+          </div>
+        </div>
       </div>
+      <button type="submit" style="float: right" class="btn btn-primary btn-sm"><img src="../../../assets/add.png" style="height: 20px;">&nbsp; Create Product</button>
+    </div>
 
-      <div class="form-check">
-        <input type="checkbox" class="form-check-input" id="isAvailable">
-        <label class="form-check-label" for="isAvailable">Is Available</label>
-      </div>
-
-      <button type="submit" style="float: right" class="btn btn-primary btn-sm">Create Product</button>
-    </form>
-  </div>
+  </form>
 </div>
+
 
 
