--- a/WebSPA/src/app/orders/edit-order/edit-order.component.html
+++ b/WebSPA/src/app/orders/edit-order/edit-order.component.html
@@ -12,7 +12,7 @@
   </div>
   <hr>
   <div>
-    <form #orderForm="ngForm">
+    <form #orderForm="ngForm" (ngSubmit)="onEditButtonClick(orderForm)">
       <div>
         <div class="col">
           <div class="row-sm">Customer Details :</div>
@@ -27,24 +27,24 @@
             </div>
           </div>
           <!--<fieldset class="form-group">
-      <div class="row">
-        <legend class="col-form-label col-form-label-sm col-sm-2 pt-0">Gender</legend>
-        <div class="col-sm-10">
-          <div class="form-check form-check-inline">
-            <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderM" value="Male" readonly>
-            <label class="form-check-label col-form-label-sm" for="genderM">
-              Male
-            </label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderF" value="Female" readonly>
-            <label class="form-check-label col-form-label-sm" for="gendeFM">
-              Female
-            </label>
-          </div>
-        </div>
-      </div>
-    </fieldset>-->
+            <div class="row">
+              <legend class="col-form-label col-form-label-sm col-sm-2 pt-0">Gender</legend>
+              <div class="col-sm-10">
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderM" value="Male" readonly>
+                  <label class="form-check-label col-form-label-sm" for="genderM">
+                    Male
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input form-control-sm" type="radio" name="gender" [(ngModel)]="gender" id="genderF" value="Female" readonly>
+                  <label class="form-check-label col-form-label-sm" for="gendeFM">
+                    Female
+                  </label>
+                </div>
+              </div>
+            </div>
+          </fieldset>-->
 
           <div class="row-sm">Contact Details :</div>
           <div class="form-group row">
@@ -88,45 +88,45 @@
         </div>
         <hr />
 
-        <!--<div>
-    <div class="col-sm">Add Order Items :</div>
-    <div class="form-group col">
-      <div class="form-row">
-        <div class="form-group col-md-2">
-          <label class="col-form-label col-form-label-sm">Product</label>
-          <select id="productN" class="form-control form-control-sm" name="productN" [(ngModel)]="productN" (ngModelChange)="onProductSelected()">
-            <option selected>Choose Product...</option>
-            <option *ngFor="let productName of productNames">{{ productName }}</option>
-          </select>
+        <div>
+          <div class="col-sm">Add Order Items :</div>
+          <div class="form-group col">
+            <div class="form-row">
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Product</label>
+                <select id="productN" class="form-control form-control-sm" name="productN" [(ngModel)]="productN" (ngModelChange)="onProductSelected()">
+                  <option selected>Choose Product...</option>
+                  <option *ngFor="let productName of productNames">{{ productName }}</option>
+                </select>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Product Category</label>
+                <input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Description</label>
+                <input type="text" class="form-control form-control-sm" id="description" name="description" [(ngModel)]="description" placeholder="Description" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Unit Price</label>
+                <input type="text" class="form-control form-control-sm" id="unitPrice" name="unitPrice" [(ngModel)]="unitPrice" placeholder="Unit Price" readonly>
+              </div>
+              <div class="form-group col-md-2">
+                <label class="col-form-label col-form-label-sm">Availability</label>
+                <input type="text" class="form-control form-control-sm" id="availability" name="availability" [(ngModel)]="availability" placeholder="Availability" readonly>
+              </div>
+              <div class="form-group col-md-1">
+                <label class="col-form-label col-form-label-sm">Quantity</label>
+                <input type="text" class="form-control  form-control-sm" id="quantity" name="quantity" [(ngModel)]="quantity" placeholder="Quantity">
+              </div>
+              <div *ngIf="availability == 'In Stock' && quantity > 0">
+                <label class="col-form-label col-form-label-sm"> `</label>
+                <button type="button" style="background-color:white" class="form-control  form-control-sm btn btn-sm" (click)="addOrderItems()"><img src="../../../assets/add.png" style="height: 25px;"></button>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group col-md-2">
-          <label class="col-form-label col-form-label-sm">Product Category</label>
-          <input type="text" class="form-control form-control-sm" id="productCategory" name="productCategory" [(ngModel)]="productCategory" placeholder="Product Category" readonly>
-        </div>
-        <div class="form-group col-md-2">
-          <label class="col-form-label col-form-label-sm">Description</label>
-          <input type="text" class="form-control form-control-sm" id="description" name="description" [(ngModel)]="description" placeholder="Description" readonly>
-        </div>
-        <div class="form-group col-md-2">
-          <label class="col-form-label col-form-label-sm">Unit Price</label>
-          <input type="text" class="form-control form-control-sm" id="unitPrice" name="unitPrice" [(ngModel)]="unitPrice" placeholder="Unit Price" readonly>
-        </div>
-        <div class="form-group col-md-2">
-          <label class="col-form-label col-form-label-sm">Availability</label>
-          <input type="text" class="form-control form-control-sm" id="availability" name="availability" [(ngModel)]="availability" placeholder="Availability" readonly>
-        </div>
-        <div class="form-group col-md-1">
-          <label class="col-form-label col-form-label-sm">Quantity</label>
-          <input type="text" class="form-control  form-control-sm" id="quantity" name="quantity" [(ngModel)]="quantity" placeholder="Quantity">
-        </div>
-        <div *ngIf="availability == 'In Stock' && customer && quantity > 0">
-          <label class="col-form-label col-form-label-sm"> `</label>
-          <button type="button" style="background-color:white" class="form-control  form-control-sm btn btn-sm" (click)="addOrderItems()"><img src="../../../assets/add.png" style="height: 25px;"></button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <hr />-->
+        <hr />
 
         <div class="col-sm">Order Item Details :</div>
         <div>
@@ -155,6 +155,10 @@
               <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
               <mat-cell *matCellDef="let orderItem"> {{ (orderItem.price != null && orderItem.quantity != null ? orderItem.price * orderItem.quantity : 0)}} </mat-cell>
             </ng-container>
+            <ng-container matColumnDef="delete">
+              <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+              <mat-cell *matCellDef="let orderItem"> <button type="button" style="background-color:white; border:0px solid transparent;" class="form-control-sm btn btn-sm" (click)="removeOrderItems(orderItem.orderItemId)"><img src="../../../assets/cancel.png" style="height: 20px;"></button> </mat-cell>
+            </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
@@ -162,14 +166,12 @@
         <hr />
         <div class="form-check">
           <div class="col">
-            <input type="checkbox" class="form-check-input" id="isCompleted" name="isCompleted" [(ngModel)]="isCompleted" disabled="disabled">
+            <input type="checkbox" class="form-check-input" id="isCompleted" name="isCompleted" [(ngModel)]="isCompleted">
             <label class="form-check-label" for="isCompleted">Order is Completed.</label>
           </div>
         </div>
         <div style="float: right">
-          <button *ngIf="!isCompleted" type="button" class="btn btn-info btn-sm" (click)="editOrder(orderId)"><img src="../../../assets/edit.png" style="height: 20px;">&nbsp; Edit Order</button>
-          &nbsp;
-          <button type="button" class="btn btn-sm btn-danger" (click)="deleteOrder(orderId)"><img src="../../../assets/delete.png" style="height: 20px;">&nbsp; Delete Order</button>
+          <button type="submit" *ngIf="orderItems.length > 0" class="btn btn-info btn-sm"><img src="../../../assets/edit.png" style="height: 20px;">&nbsp; Edit Order</button>
         </div>
       </div>
     </form>
