--- a/WebSPA/src/app/orders/orders.component.html
+++ b/WebSPA/src/app/orders/orders.component.html
@@ -9,10 +9,10 @@
         <a class="nav-link" href="orders/addOrder">Create Order</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="orders/addCustomer">Create Customer</a>
+        <a class="nav-link" href="orders/addCustomer">Customer</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="orders/addProduct">Create Product</a>
+        <a class="nav-link" href="orders/addProduct">Product</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contacts">Customer Details</a>
