--- a/WebSPA/src/app/orders/orders.component.html
+++ b/WebSPA/src/app/orders/orders.component.html
@@ -6,16 +6,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="orders/addOrder">Create Order</a>
+        <a class="nav-link" href="orders/addOrder">Orders</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="orders/addCustomer">Customer</a>
+        <a class="nav-link" href="orders/addCustomer">Customers</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="orders/addProduct">Product</a>
+        <a class="nav-link" href="orders/addProduct">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="contacts">Customer Details</a>
+        <a class="nav-link" href="contacts">Contact Details</a>
       </li>
     </ul>
   </div>
