--- a/WebSPA/src/app/orders/create-product/create-product.component.html
+++ b/WebSPA/src/app/orders/create-product/create-product.component.html
@@ -70,7 +70,7 @@
 
           <div class="form-group">
             <label class="col-form-label col-form-label-sm">Description</label>
-            <textarea rows="4" class="form-control  form-control-sm" id="street" name="description" [(ngModel)]="description" placeholder="Product Description"></textarea>
+            <textarea rows="4" class="form-control  form-control-sm" id="description" name="description" [(ngModel)]="description" placeholder="Product Description"></textarea>
           </div>
 
           <div class="form-group row">
